# Ambient

./: Cargo.toml  ambient.toml
app/: Cargo.toml
app/src/client/: mod.rs  wasm.rs
app/src/server/: mod.rs  wasm.rs
crates/audio/: Cargo.toml
crates/audio/assets/: SOUNDS_CREDITS.md
crates/audio/examples/: filters.rs  random.rs  slices.rs  spatial.rs  wav.rs
crates/audio/src/: assets.rs  lib.rs  mixer.rs  spatial.rs  track.rs
crates/core/src/: audio.rs  lib.rs
crates/ecs/: Cargo.toml
crates/ecs/src/: lib.rs
crates/prefab/src/: lib.rs
crates/wasm/: Cargo.toml
crates/wasm/src/client/: mod.rs
crates/wasm/src/server/: mod.rs  unused.rs
crates/wasm/src/shared/: bindings.rs  conversion.rs
crates/wasm/src/shared/implementation/: audio.rs  mod.rs
crates/wasm/wit/: audio.wit  audiosys.wit  client-audiosys.wit  entity.wit  main.wit  types.wit
crates/world_audio/examples/: client_spatial.rs
crates/world_audio/src/: sounds.rs  systems.rs
guest/rust/api/src/: audio.rs  audiosys.rs  entity.rs  lib.rs  prelude.rs
guest/rust/api/src/internal/: bindings.rs
guest/rust/examples/basics/asset_loading/assets/: pipeline.json
guest/rust/examples/basics/asset_loading/src/: client.rs  server.rs
guest/rust/examples/basics/clientside/: Cargo.toml
guest/rust/examples/basics/physics/: Cargo.toml  ambient.toml
guest/rust/examples/games/keeper/: Cargo.toml  ambient.toml
guest/rust/examples/games/keeper/assets/: pipeline.json
guest/rust/examples/games/keeper/src/: server.rs
guest/rust/examples/games/synthero/: Cargo.toml  README.md  ambient.toml
(+9 files in other folders)
